apps/web/src/components/tx-flow/common/TxFlowContent/styles.module.css
.container {
  margin-top: 10px;
}

.contentContainer {
  padding-left: 0;
  padding-right: 0;
}

.header {
  overflow: hidden;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.headerInner {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: var(--space-3);
  border-bottom: 1px solid var(--border);
}

.safeInfoCard {
  padding: 4px 8px 4px 4px;
  max-width: 212px;
  margin-left: -12px;
  overflow: visible;
  position: fixed;
  top: 62px;
}

.step {
  position: relative;
}

/* Back button */
.backButton {
  position: absolute;
  left: var(--space-3);
  bottom: var(--space-3);
}

.step > :global(.txCardRoot:first-child) {
  border-top-right-radius: 0;
  border-top-left-radius: 0;
  margin-top: 0;
}

/* Submit button */
.step :global(.txCardActions) {
  display: flex;
  flex-direction: column;
  padding: 0;
  margin-top: var(--space-3);
}

.step :global(.txCardActions) > * {
  align-self: flex-end;
}

.icon {
  width: 32px;
  height: 32px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  border-radius: var(--radius-md);
  border: 1px solid var(--border);
  margin-right: var(--space-2);
}

.icon svg {
  height: 16px;
  width: auto;
}

.step :global([data-slot='accordion-trigger']) {
  font-weight: bold;
  font-size: 14px;
}

.sidebarSlot {
  margin-bottom: var(--space-2);
}

.sticky {
  display: flex;
  flex-direction: column;
  gap: var(--space-2);
  position: sticky;
  top: var(--space-2);
  margin-top: var(--space-2);
}

.titleWrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: var(--space-2);
}

.widget {
  /* Height of transaction type title */
  margin-top: 30px;
}

@media (max-width: 1199px) {
  .backButton {
    left: 50%;
    transform: translateX(-50%);
  }

  .step :global(.txCardActions) {
    margin-bottom: var(--space-8);
  }
}

@media (max-width: 899.95px) {
  .widget {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
    margin-top: unset;
  }

  .widget :global([data-testid='safe-shield-widget']) {
    height: 100%;
  }

  .titleWrapper {
    position: absolute;
    top: 16px;
    left: var(--space-2);
    margin-bottom: 0;
    width: calc(100% - 70px);
  }

  .title {
    font-size: 16px;
    line-height: 18px;
  }

  .container {
    padding: 0;
  }

  .step :global(.txCardRoot),
  .header {
    border-radius: 0;
  }
}

